--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                <div class="footer-link"><a>Privacy Policy</a></div>
            </div>
 
-           <div class="footer-block">
+           <div class="footer-block mobile">
                <div class="footer-inner footer-link"><a>Instagram</a></div>
                <div class="footer-link"><a>Facebook</a></div>
            </div>
