--- a/index.html
+++ b/index.html
@@ -5,11 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>test</title>
+   <title>test</title>
 </head>
 <body>
 
+
+
    <div class="hero">
+    <div class="loading">
+        <div class="pink"></div>
+        <div class="grey">
+            <div class="load">
+                <div class="load-text">
+                    <div class="load-overlay"></div>
+                    <div class="letter">Debonaire</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
        <nav>
            <div  class="navlinks nav-block drop">
                <div class="navlink">
@@ -58,8 +72,8 @@
                     Hi, we are Debonaire. <br> Ready to create an art form on your body. 
                 </div>
                 <div class="header-image">
-                    <div class="background-image right"><img src="./images/header-bg-1.svg" alt=""></div>
-                    <div class="background-image bottom"><img src="./images/header-bg-2.svg" alt=""></div>
+                    <div class="background-image vect right"><img src="./images/header-bg-1.svg" alt=""></div>
+                    <div class="background-image vect bottom"><img src="./images/header-bg-2.svg" alt=""></div>
                     <div class="background-image left"><img src="./images/header-vector.svg" alt=""></div>
                 <div class="girl-image"><img src="./images/jessica-felicio-FjvXUeYf1AA-unsplash.jpg" alt="header girl image"></div> 
                 </div>
@@ -283,7 +297,10 @@
            
        </div>
     </div>
-    
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollToPlugin.min.js"></script>    
     <script src="./app.js"></script>
 </body>
 </html>
